maven202002272238 -add maven guideline